--- a/off-chain-client/Cargo.toml
+++ b/off-chain-client/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-anchor-client = "0.30.1"
-solana-program = "2.1.6"
+shellexpand = "3.1.0"
+solana-client = "2.1.6"
+solana-pubkey = "2.1.6"
 solana-sdk = "2.1.6"
-
